# ShotHappy

./: README.md  build.gradle  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/left/shothappy/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Hen.3ds  animal.txt  animals.json  animals.txt  assets.lst  fruits.json  fruits.txt  targets.json  vegetable.txt  vegetables.json  vegetables.txt
app/src/main/cpp/: ar.cc  helloar.cc  renderer.cpp  renderer.h
app/src/main/cpp/include/easyar/: augmenter.hpp  barcode.hpp  base.hpp  camera.hpp  frame.hpp  image.hpp  matrix.hpp  player.hpp  storage.hpp  target.hpp  tracker.hpp  utility.hpp
app/src/main/cpp/model/: banana.h  bat.h  bulldog.h  carrot.h  cat.h  deer.h  doberman.h  dove.h  frog.h  grapefruit.h  leopard.h  lion.h  ostrich.h  penguin.h  pig.h  spider.h  tiger.h
app/src/main/cpp/soil/: SOIL.c  SOIL.h  image_DXT.c  stb_image_aug.h
app/src/main/java/com/left/shothappy/: ARActivity.java  BaseActivity.java  ForgetPasswordActivity.java  GameActivity.java  LoginActivity.java  MainActivity.java  RateoflearningActivity.java  RegisterActivity.java  RewardActivity.java  SettingActivity.java  TestActivity.java  ThesaurusActivity.java  WBShareActivity.java
app/src/main/java/com/left/shothappy/adapters/: DictionaryAdapter.java  ThesaurusAdapter.java
app/src/main/java/com/left/shothappy/bean/: DayCoordinate.java  Dict.java  Feedback.java  Pos_acceptation.java  Ps_pron.java  RewardVideo.java  Schedule.java  Sent.java  User.java
app/src/main/java/com/left/shothappy/config/: MyApplication.java
app/src/main/java/com/left/shothappy/utils/: AssetCopyer.java  BaiduTranslate.java  IcibaTranslate.java  PicUtils.java  Renderer.java  ScheduleUtils.java
app/src/main/java/com/left/shothappy/view/: ARFragment.java  CustomMarkerView.java  RateoflearningFragment.java  SettingFragment.java  ThesaurusFragment.java  rateoflearningFragment.java
app/src/main/java/com/left/shothappy/views/: ARFragment.java  AnimalDictionaryFragment.java  CustomMarkerView.java  DictionaryFragment.java  FruitDictionaryFragment.java  GLView.java  RateoflearningFragment.java  (+3 more)
app/src/main/java/com/umeng/soexample/: WBShareActivity.java
app/src/main/jni/: Mesh.h  Model.h  Shader.h  ar.cc  ar.hpp  arnative.cc  helloar.cc  renderer.cc  renderer.cpp  renderer.h  renderer.hpp
app/src/main/jni/model/: banana.h  bat.h  bulldog.h  carrot.h  cat.h  deer.h  frog.h  leopard.h  lion.h  mandarin.h  mango.h  peach.h  shark.h  spider.h  strawberry.h  tiger.h  wolf.h
app/src/main/jni/soil/: image_helper.c  stb_image_aug.c  stbi_DDS_aug.h  stbi_DDS_aug_c.h
app/src/main/res/anim/: push_left_in.xml  push_left_out.xml  push_right_in.xml  push_right_out.xml
app/src/main/res/layout/: activity_ar.xml  activity_forget_password.xml  activity_game.xml  activity_login.xml  activity_main.xml  activity_rateoflearning.xml  activity_register.xml  activity_reward.xml  activity_setting.xml  activity_test.xml  activity_thesaurus.xml  app_bar_main.xml  content_main.xml  custom_marker_view_layout.xml  fragment_animals.xml  fragment_ar.xml  fragment_dictionary.xml  fragment_feedback.xml  fragment_fruits.xml  fragment_rateoflearning.xml  fragment_setting.xml  fragment_thesaurus.xml  fragment_vegetables.xml  nav_header_main.xml  view_about.xml  view_card.xml  view_changepassword.xml  view_dictionary_item.xml  view_feedback.xml  view_rateoflearning.xml  view_setting.xml  view_share.xml  view_thesaurus.xml  view_title.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/left/shothappy/: ExampleUnitTest.java
(+2 files in other folders)
